packages/build/tests/error/fixtures/cancel_post_deploy/plugin.js
'use strict'

module.exports = {
  onEnd({
    utils: {
      build: { cancelBuild },
    },
  }) {
    cancelBuild('test')
  },
}
